# edulib

./: .gitignore  db.sqlite3  pyproject.toml
chat/: admin.py  consumers.py  models.py  views.py
chat/migrations/: 0001_initial.py
chat/templates/chat/: room.html
courses/: admin.py  fields.py  models.py  urls.py  views.py
courses/api/: serializers.py  urls.py  views.py
courses/fixtures/: subjects.json
courses/migrations/: 0001_initial.py  0002_content_file_image_text_video.py  0003_alter_content_options_alter_module_options_and_more.py  0004_course_students.py
courses/templates/: base.html
courses/templates/courses/manage/content/: form.html
courses/templates/courses/manage/course/: delete.html  form.html  list.html
courses/templates/courses/manage/module/: content_list.html
courses/templates/registration/: logged_out.html  login.html
educa/: settings.py  urls.py
students/: forms.py  urls.py  views.py
students/templates/students/course/: detail.html  list.html
students/templates/students/student/: registration.html
